packages/example/dist/src/errors/UserNotFoundError.d.ts
import { HttpError } from 'routing-controllers';
export declare class UserNotFoundError extends HttpError {
    constructor();
}
